Add files via upload
Corrige compatibilidad JDK, persistencia CSV y eliminacion de tramites. Agrega selector consola/ventana (SIA-10)